@@ -2,102 +2,72 @@ package com.velsystems.ecommerce.service.product;
 
 import com.velsystems.ecommerce.dto.request.*;
 import com.velsystems.ecommerce.dto.response.*;
-import com.velsystems.ecommerce.model.Brand;
+import com.velsystems.ecommerce.model.*;
 import com.velsystems.ecommerce.model.product.*;
 import com.velsystems.ecommerce.repository.*;
-import com.velsystems.ecommerce.repository.product.ProductImageRepository;
+import com.velsystems.ecommerce.repository.product.ProductOptionRepository;
 import com.velsystems.ecommerce.repository.product.ProductRepository;
-import com.velsystems.ecommerce.repository.product.ProductSpecificationGroupRepository;
-import com.velsystems.ecommerce.repository.product.ProductTypeRepository;
-import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
+import org.springframework.data.domain.*;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
 import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-@Transactional
 public class ProductServiceImpl implements ProductService {
 
     private final ProductRepository productRepository;
     private final BrandRepository brandRepository;
-    private final ProductTypeRepository productTypeRepository;
-    private final ProductImageRepository productImageRepository;
-    private final ProductSpecificationGroupRepository productSpecificationGroupRepository;
+    private final CategoryRepository categoryRepository;
+    private final ProductOptionRepository optionRepository;
     private final ModelMapper modelMapper;
 
+    // ✅ Create
     @Override
-    public ProductResponse createProduct(ProductCreateRequest request) {
-        Brand brand = brandRepository.findById(request.getBrandId())
-                .orElseThrow(() -> new EntityNotFoundException("Brand not found"));
-
-        ProductType productType = productTypeRepository.findById(request.getProductTypeId())
-                .orElseThrow(() -> new EntityNotFoundException("ProductType not found"));
-
-        Product product = Product.builder()
-                .name(request.getName())
-                .slug(request.getSlug())
-                .brand(brand)
-                .productType(productType)
-                .price(request.getPrice())
-                .stock(request.getStock())
-                .description(request.getDescription())
-                .build();
-
-        // Handle images
-        if (request.getImageUrls() != null) {
-            Set<ProductImage> images = request.getImageUrls().stream()
-                    .map(imgDto -> ProductImage.builder()
-                            .imageUrl(imgDto.getImageUrl())
-                            .isPrimary(Boolean.TRUE.equals(imgDto.getIsPrimary()))
-                            .product(product)
-                            .build())
-                    .collect(Collectors.toSet());
-            product.setImages(images);
-        }
-
-        // Handle specification groups
-        if (request.getSpecificationGroups() != null) {
-            Set<ProductSpecificationGroup> groups = request.getSpecificationGroups().stream()
-                    .map(groupDto -> {
-                        ProductSpecificationGroup group = ProductSpecificationGroup.builder()
-                                .name(groupDto.getName())
-                                .product(product)
-                                .build();
-
-                        Set<ProductSpecification> specs = groupDto.getSpecifications().stream()
-                                .map(specDto -> ProductSpecification.builder()
-                                        .attributeName(specDto.getAttributeName())
-                                        .attributeValue(specDto.getAttributeValue())
-                                        .group(group)
-                                        .build())
-                                .collect(Collectors.toSet());
-                        group.setSpecifications(specs);
-                        return group;
-                    })
-                    .collect(Collectors.toSet());
-            product.setSpecificationGroups(groups);
-        }
-
+    public ProductResponse createProduct(ProductRequest request) {
+        Product product = buildProductFromRequest(request, null);
         productRepository.save(product);
         return mapToResponse(product);
     }
 
+    // ✅ Update (rebuild nested children)
     @Override
-    public ProductResponse getProduct(UUID productId) {
-        Product product = productRepository.findById(productId)
-                .orElseThrow(() -> new EntityNotFoundException("Product not found"));
+    public ProductResponse updateProduct(UUID id, ProductRequest request) {
+        Product existing = productRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Product not found"));
+
+        // clear children before re-adding
+        existing.getVariants().clear();
+        existing.getImages().clear();
+        existing.getSpecificationGroups().clear();
+
+        Product updated = buildProductFromRequest(request, existing);
+        productRepository.save(updated);
+
+        return mapToResponse(updated);
+    }
+
+    // ✅ Delete
+    @Override
+    public void deleteProduct(UUID id) {
+        if (!productRepository.existsById(id)) {
+            throw new RuntimeException("Product not found");
+        }
+        productRepository.deleteById(id);
+    }
+
+    // ✅ Get One
+    @Override
+    public ProductResponse getProductById(UUID id) {
+        Product product = productRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Product not found"));
         return mapToResponse(product);
     }
 
+    // ✅ Get All (no pagination)
     @Override
     public List<ProductResponse> getAllProducts() {
         return productRepository.findAll().stream()
@@ -105,123 +75,173 @@ public class ProductServiceImpl implements ProductService {
                 .collect(Collectors.toList());
     }
 
+    // ✅ Get All (pagination)
     @Override
-    public ProductResponse updateProduct(UUID productId, ProductUpdateRequest request) {
-        Product product = productRepository.findById(productId)
-                .orElseThrow(() -> new EntityNotFoundException("Product not found"));
-
-        Brand brand = brandRepository.findById(request.getBrandId())
-                .orElseThrow(() -> new EntityNotFoundException("Brand not found"));
-
-        ProductType productType = productTypeRepository.findById(request.getProductTypeId())
-                .orElseThrow(() -> new EntityNotFoundException("ProductType not found"));
-
-        // Update basic fields
-        product.setName(request.getName());
-        product.setSlug(request.getSlug());
-        product.setBrand(brand);
-        product.setProductType(productType);
-        product.setPrice(request.getPrice());
-        product.setStock(request.getStock());
-        product.setDescription(request.getDescription());
-
-        // Remove images
-        if (request.getImageUrlIds() != null && !request.getImageUrlIds().isEmpty()) {
-            request.getImageUrlIds().forEach(id -> {
-                ProductImage img = productImageRepository.findById(id)
-                        .orElseThrow(() -> new EntityNotFoundException("Image not found"));
-                product.getImages().remove(img);
-                productImageRepository.delete(img);
-            });
-        }
-
-        // Add new images
-        if (request.getImageUrls() != null) {
-            for (ProductImageRequestDto imgDto : request.getImageUrls()) {
-                ProductImage image = ProductImage.builder()
-                        .imageUrl(imgDto.getImageUrl())
-                        .isPrimary(Boolean.TRUE.equals(imgDto.getIsPrimary()))
-                        .product(product)
-                        .build();
-                product.getImages().add(image);
-            }
-        }
-
-        // Remove specification groups
-        if (request.getSpecificationGroupIds() != null && !request.getSpecificationGroupIds().isEmpty()) {
-            request.getSpecificationGroupIds().forEach(id -> {
-                ProductSpecificationGroup group = productSpecificationGroupRepository.findById(id)
-                        .orElseThrow(() -> new EntityNotFoundException("Specification group not found"));
-                product.getSpecificationGroups().remove(group);
-                productSpecificationGroupRepository.delete(group);
-            });
-        }
-
-        // Add new specification groups
-        if (request.getSpecificationGroups() != null) {
-            for (ProductSpecificationGroupRequest groupDto : request.getSpecificationGroups()) {
-                ProductSpecificationGroup group = ProductSpecificationGroup.builder()
-                        .name(groupDto.getName())
-                        .product(product)
-                        .build();
-
-                Set<ProductSpecification> specs = groupDto.getSpecifications().stream()
-                        .map(specDto -> ProductSpecification.builder()
-                                .attributeName(specDto.getAttributeName())
-                                .attributeValue(specDto.getAttributeValue())
-                                .group(group)
-                                .build())
-                        .collect(Collectors.toSet());
-                group.setSpecifications(specs);
-
-                product.getSpecificationGroups().add(group);
-            }
-        }
-
-        productRepository.save(product);
-        return mapToResponse(product);
-    }
-
-    @Override
-    public void deleteProduct(UUID productId) {
-        if (!productRepository.existsById(productId)) {
-            throw new EntityNotFoundException("Product not found");
-        }
-        productRepository.deleteById(productId);
-    }
-
-    @Override
-    public Page<ProductResponse> getProductsPaginated(int page, int size, String sortBy, String sortDir) {
-        Sort sort = sortDir.equalsIgnoreCase(Sort.Direction.ASC.name())
-                ? Sort.by(sortBy).ascending()
-                : Sort.by(sortBy).descending();
-
-        Pageable pageable = PageRequest.of(page, size, sort);
+    public Page<ProductResponse> getAllProductsPaged(int page, int size) {
+        PageRequest pageable = PageRequest.of(page, size);
         Page<Product> productPage = productRepository.findAll(pageable);
 
-        return productPage.map(this::mapToResponse);
+        List<ProductResponse> responses = productPage.getContent().stream()
+                .map(this::mapToResponse)
+                .toList();
+
+        return new PageImpl<>(responses, pageable, productPage.getTotalElements());
     }
 
+    // ------------------- Helper: Build Product with Nested -------------------
+    private Product buildProductFromRequest(ProductRequest request, Product base) {
+        Product product = (base == null) ? new Product() : base;
+
+        product.setName(request.getName());
+        product.setSlug(request.getSlug());
+        product.setDescription(request.getDescription());
+
+        Brand brand = brandRepository.findById(request.getBrandId())
+                .orElseThrow(() -> new RuntimeException("Brand not found"));
+        Category category = categoryRepository.findById(request.getCategoryId())
+                .orElseThrow(() -> new RuntimeException("Category not found"));
+
+        product.setBrand(brand);
+        product.setCategory(category);
+
+        // ---- Images ----
+        if (request.getImages() != null) {
+            request.getImages().forEach(imgReq -> {
+                ProductImage img = ProductImage.builder()
+                        .imageUrl(imgReq.getImageUrl())
+                        .isPrimary(imgReq.getIsPrimary())
+                        .sortOrder(imgReq.getSortOrder())
+                        .product(product)
+                        .build();
+                product.getImages().add(img);
+            });
+        }
+
+        // ---- Variants ----
+        if (request.getVariants() != null) {
+            request.getVariants().forEach(vReq -> {
+                ProductVariant variant = ProductVariant.builder()
+                        .sku(vReq.getSku())
+                        .price(vReq.getPrice())
+                        .product(product)
+                        .build();
+
+                // Variant Options
+                if (vReq.getOptions() != null) {
+                    vReq.getOptions().forEach(optReq -> {
+                        ProductOption option = optionRepository.findById(optReq.getOptionId())
+                                .orElseThrow(() -> new RuntimeException("Option not found"));
+                        ProductVariantOption variantOpt = ProductVariantOption.builder()
+                                .option(option)
+                                .value(optReq.getValue())
+                                .variant(variant)
+                                .build();
+                        variant.getOptions().add(variantOpt);
+                    });
+                }
+
+                // Variant Images
+                if (vReq.getImages() != null) {
+                    vReq.getImages().forEach(imgReq -> {
+                        ProductImage vImg = ProductImage.builder()
+                                .imageUrl(imgReq.getImageUrl())
+                                .isPrimary(imgReq.getIsPrimary())
+                                .sortOrder(imgReq.getSortOrder())
+                                .variant(variant)
+                                .build();
+                        variant.getImages().add(vImg);
+                    });
+                }
+
+                product.getVariants().add(variant);
+            });
+        }
+
+        // ---- Specifications ----
+        if (request.getSpecificationGroups() != null) {
+            request.getSpecificationGroups().forEach(groupReq -> {
+                ProductSpecificationGroup group = ProductSpecificationGroup.builder()
+                        .name(groupReq.getName())
+                        .product(product)
+                        .build();
+
+                if (groupReq.getSpecifications() != null) {
+                    groupReq.getSpecifications().forEach(specReq -> {
+                        ProductSpecification spec = ProductSpecification.builder()
+                                .attributeName(specReq.getAttributeName())
+                                .attributeValue(specReq.getAttributeValue())
+                                .group(group)
+                                .build();
+                        group.getSpecifications().add(spec);
+                    });
+                }
+
+                product.getSpecificationGroups().add(group);
+            });
+        }
+
+        return product;
+    }
+
+    // ------------------- Helper: Map to Response -------------------
     private ProductResponse mapToResponse(Product product) {
         ProductResponse response = modelMapper.map(product, ProductResponse.class);
+        response.setBrandName(product.getBrand() != null ? product.getBrand().getName() : null);
+        response.setCategoryName(product.getCategory() != null ? product.getCategory().getName() : null);
 
-        // Custom mapping for nested fields
-        response.setBrand(modelMapper.map(product.getBrand(), BrandResponseDto.class));
-        response.setProductType(modelMapper.map(product.getProductType(), ProductTypeResponse.class));
+        // Images
+        response.setImages(product.getImages().stream().map(img -> {
+            ProductImageResponse r = new ProductImageResponse();
+            r.setId(img.getId());
+            r.setImageUrl(img.getImageUrl());
+            r.setIsPrimary(img.getIsPrimary());
+            r.setSortOrder(img.getSortOrder());
+            return r;
+        }).toList());
 
-        response.setImage(product.getImages().stream()
-                .map(img -> modelMapper.map(img, ProductImageResponseDto.class))
-                .collect(Collectors.toList()));
+        // Variants
+        response.setVariants(product.getVariants().stream().map(v -> {
+            ProductVariantResponse vr = new ProductVariantResponse();
+            vr.setId(v.getId());
+            vr.setSku(v.getSku());
+            vr.setPrice(v.getPrice());
 
-        response.setSpecificationGroup(product.getSpecificationGroups().stream()
-                .map(group -> ProductSpecificationGroupResponse.builder()
-                        .id(group.getId())
-                        .name(group.getName())
-                        .specifications(group.getSpecifications().stream()
-                                .map(spec -> modelMapper.map(spec, ProductSpecificationResponse.class))
-                                .collect(Collectors.toList()))
-                        .build())
-                .collect(Collectors.toList()));
+            vr.setOptions(v.getOptions().stream().map(o -> {
+                ProductVariantOptionResponse or = new ProductVariantOptionResponse();
+                or.setId(o.getId());
+                or.setValue(o.getValue());
+                or.setOptionName(o.getOption().getName());
+                return or;
+            }).toList());
+
+            vr.setImages(v.getImages().stream().map(img -> {
+                ProductImageResponse ir = new ProductImageResponse();
+                ir.setId(img.getId());
+                ir.setImageUrl(img.getImageUrl());
+                ir.setIsPrimary(img.getIsPrimary());
+                ir.setSortOrder(img.getSortOrder());
+                return ir;
+            }).toList());
+
+            return vr;
+        }).toList());
+
+        // Specs
+        response.setSpecificationGroups(product.getSpecificationGroups().stream().map(g -> {
+            ProductSpecificationGroupResponse gr = new ProductSpecificationGroupResponse();
+            gr.setId(g.getId());
+            gr.setName(g.getName());
+
+            gr.setSpecifications(g.getSpecifications().stream().map(s -> {
+                ProductSpecificationResponse sr = new ProductSpecificationResponse();
+                sr.setId(s.getId());
+                sr.setAttributeName(s.getAttributeName());
+                sr.setAttributeValue(s.getAttributeValue());
+                return sr;
+            }).toList());
+
+            return gr;
+        }).toList());
 
         return response;
     }
